--- a/EjercicioCartas.html
+++ b/EjercicioCartas.html
@@ -100,7 +100,7 @@
         else{
             document.getElementById("punt").innerHTML= username + " -> Score: "+ contador + " Errores: " + contadorError;
         }
-        document.getElementById("rank").innerHTML= "Hihg Score " + getCookie("username") + " " + getCookie("score");
+        document.getElementById("rank").innerHTML= "High Score " + getCookie("username") + " " + getCookie("score");
 
         function voltear(elem){
             if(elem.id == 1 || elem.id == 4){
@@ -188,7 +188,7 @@
             else{
                 document.getElementById("punt").innerHTML= username + " -> Score: "+ contador + " Errores: " + contadorError;
             }
-            document.getElementById("rank").innerHTML= "Hihg Score " + getCookie("username") + " " + getCookie("score");
+            document.getElementById("rank").innerHTML= "High Score " + getCookie("username") + " " + getCookie("score");
             }
 
         function setCookie(cname,cvalue,exdays) {
